--- a/composer.json
+++ b/composer.json
@@ -54,16 +54,12 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "cache:clear": "echo Skipping cache:clear"
         },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
+        "post-install-cmd": [],
+        "post-update-cmd": []
     },
+
     "conflict": {
         "symfony/symfony": "*"
     },
