--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -7,7 +7,7 @@ nelmio_cors:
     expose_headers: []
     max_age: 3600
   paths:
-    "^/api/": # You can restrict the CORS rules to specific routes
+    "^/": # You can restrict the CORS rules to specific routes
       allow_origin: ["*"] # Adjust to your specific needs
       allow_headers: ["Content-Type", "Authorization"]
       allow_methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
